# logtail

./: CMakeLists.txt  LogTailWidget.cpp  LogTailWidget.h  README.md  logtail.json
